8275868: ciReplay: Inlining fails with "unloaded signature classes" due to wrong protection domains

Reviewed-by: mdoerr
Backport-of: 5bb1992b8408a0d196b1afa308bc00d007458dbd